<?xml version="1.0"?>
<package format="2">
  <name>cyberdog_utils</name>
  <version>0.5.0</version>
  <description>A simple follower using centroid in depth images.</description>
  <maintainer email="blabla@bla.com">bla</maintainer>
  <license>Apache License 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_geometry</depend>
  <depend>motion_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
